<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_girl"
            android:icon="@drawable/ic_photo_black"
            android:title="@string/nav_girl"/>
        <item
            android:id="@+id/nav_military"
            android:icon="@drawable/ic_photo_black"
            android:title="@string/nav_military"/>
        <item
            android:id="@+id/nav_comic"
            android:icon="@drawable/ic_photo_black"
            android:title="@string/nav_comic"/>
        <item
            android:id="@+id/nav_pet"
            android:icon="@drawable/ic_photo_black"
            android:title="@string/nav_pet"/>
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_theme_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/theme_setting"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
